sửa lỗi imei không cập nhật liền, sửa path hình ảnh, fix lỗi index khi danh sách trống